--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,3 +1,13 @@
+---
+---
+
+@import "{{ site.theme }}";
+
+---
+---
+
+@import "{{ site.theme }}";
+
 /* 🌸 PINK ROMANTIC THEME 🌸 */
 
 .page-header {
@@ -28,10 +38,6 @@ body::before {
 }
 
 @keyframes floatHearts {
-  0% {
-    transform: translateY(0);
-  }
-  100% {
-    transform: translateY(120vh);
-  }
+  0% { transform: translateY(0); }
+  100% { transform: translateY(120vh); }
 }
