--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -36,3 +36,6 @@ body::before {
   0% { transform: translateY(0); }
   100% { transform: translateY(120vh); }
 }
+.main-content {
+  background-color: #fff0f5;
+}
