--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -26,41 +26,45 @@ a {
   padding: 2rem;
 }
 
-/* 💖 FLOATING HEARTS EVERYWHERE 💖 */
+/* 💖 BIG FLOATING HEARTS 💖 */
 
-body::before {
-  content: "💖 💗 💕 💞 💓 💘 💝 💟 💖 💗 💕 💞 💓 💘 💝 💟";
+.hearts {
   position: fixed;
-  top: -100%;
+  top: 0;
   left: 0;
   width: 100%;
-  font-size: 22px;
-  display: flex;
-  justify-content: space-around;
-  animation: floatHearts 18s linear infinite;
-  opacity: 0.75;
+  height: 100%;
   pointer-events: none;
+  overflow: hidden;
 }
 
-body::after {
-  content: "💗 💕 💞 💓 💘 💝 💟 💖 💗 💕 💞 💓 💘 💝 💟 💖";
-  position: fixed;
-  top: -120%;
-  left: 0;
-  width: 100%;
-  font-size: 18px;
-  display: flex;
-  justify-content: space-evenly;
-  animation: floatHearts 22s linear infinite;
-  opacity: 0.6;
-  pointer-events: none;
+.hearts span {
+  position: absolute;
+  font-size: 40px;
+  animation: floatUp linear infinite;
 }
 
-@keyframes floatHearts {
+/* random positions + speeds */
+
+.hearts span:nth-child(1) { left: 10%; animation-duration: 14s; }
+.hearts span:nth-child(2) { left: 25%; animation-duration: 18s; }
+.hearts span:nth-child(3) { left: 40%; animation-duration: 12s; }
+.hearts span:nth-child(4) { left: 55%; animation-duration: 16s; }
+.hearts span:nth-child(5) { left: 70%; animation-duration: 20s; }
+.hearts span:nth-child(6) { left: 82%; animation-duration: 15s; }
+.hearts span:nth-child(7) { left: 35%; animation-duration: 22s; }
+.hearts span:nth-child(8) { left: 60%; animation-duration: 17s; }
+
+@keyframes floatUp {
   0% {
-    transform: translateY(0);
+    transform: translateY(100vh) scale(0.8);
+    opacity: 0;
+  }
+  20% {
+    opacity: 1;
   }
   100% {
-    transform: translateY(220vh);
+    transform: translateY(-10vh) scale(1.2);
+    opacity: 0;
   }
 }
