--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,17 @@
     {% include head-custom.html %}
   </head>
 
+  <div class="hearts">
+  <span>💖</span>
+  <span>💗</span>
+  <span>💞</span>
+  <span>💕</span>
+  <span>💘</span>
+  <span>💝</span>
+  <span>💓</span>
+  <span>💟</span>
+</div>
+
   <body>
 
     <a id="skip-to-content" href="#content">Skip to the content.</a>
